--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -1,16 +1,19 @@
 matrix:
-- name: Markdown
-  aspell:
-    lang: en
-  dictionary:
-    encoding: utf-8
-  pipeline:
-  - pyspelling.filters.markdown:
-  - pyspelling.filters.html:
-    comments: false
-    ignores:
-    - code
-    - pre
-  sources:
-  - '**/*.md'
-  default_encoding: utf-8
+  - name: Markdown
+    aspell:
+      lang: en
+    dictionary:
+      wordlists:
+        - .wordlist.txt
+      encoding: utf-8
+    pipeline:
+      - pyspelling.filters.markdown:
+      - pyspelling.filters.html:
+        comments: false
+        ignores:
+          - code
+          - pre
+      - pyspelling.filters.url:
+    sources:
+      - '**/*.md'
+    default_encoding: utf-8
