fix action to run spellcheck on branch that was pushed

--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -7,5 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+      with:
+        ref: ${{ github.ref }}
     - uses: rojopolis/spellcheck-github-actions@0.5.0
       name: Spellcheck
