--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -2,12 +2,21 @@ name: Check Spelling
 on: push
 
 jobs:
-  build:
-    name: Spellcheck
+  spelling:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
       with:
-        ref: ${{ github.ref }}
-    - uses: rojopolis/spellcheck-github-actions@0.5.0
-      name: Spellcheck
+        python-version: 3.7
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip setuptools
+        python -m pip install pyspelling
+    - name: Install Aspell
+      run: |
+        sudo apt-get install -y aspell aspell-en
+    - name: Spell check
+       run: |
+         python -m pyspelling
