--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -19,4 +19,4 @@ jobs:
         sudo apt-get install -y aspell aspell-en
     - name: Spell check
        run: |
-         python -m pyspelling
+        python -m pyspelling -c ./.spellcheck.yml
