--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -5,26 +5,35 @@ on:
     branches:
       - master
 
-jobs:
-  spelling:
+jobs:  
+  markdown-spellcheck:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python
-      uses: actions/setup-python@v1
+    - name: pipeline-components-markdown-spellcheck
+      uses: pipeline-components/markdown-spellcheck@v0.6.0
       with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python3 -m pip install --upgrade pip setuptools
-    - name: Install Aspell
-      run: sudo apt-get install -y aspell aspell-en
-    - name: Install pyspelling
-      run: |
-        git clone https://github.com/facelessuser/pyspelling.git /tmp/pyspelling
-        pushd /tmp/pyspelling || exit 1
-        git checkout $(git tag --sort='-creatordate' | head -1)
-        python3 ./setup.py install
-        popd || exit 1
-    - name: Spell check
-      run: pyspelling
+        directory: "**/*.md"
+        options: --en-au --ignore-acronyms --report
+
+# spelling:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v1
+#     - name: Set up Python
+#       uses: actions/setup-python@v1
+#       with:
+#         python-version: 3.9
+#     - name: Install dependencies
+#       run: |
+#         python3 -m pip install --upgrade pip setuptools
+#     - name: Install Aspell
+#       run: sudo apt-get install -y aspell aspell-en
+#     - name: Install pyspelling
+#       run: |
+#         git clone https://github.com/facelessuser/pyspelling.git /tmp/pyspelling
+#         pushd /tmp/pyspelling || exit 1
+#         git checkout $(git tag --sort='-creatordate' | head -1)
+#         python3 ./setup.py install
+#         popd || exit 1
+#     - name: Spell check
+#       run: pyspelling
