--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Pull pipelinecomponents/markdown-spellcheck Image
       run: docker pull pipelinecomponents/markdown-spellcheck
     - name: Spellcheck Markdown Files
-      run: docker run --rm -i -v "$PWD:/github/workspace" --workdir /github/workspace pipelinecomponents/markdown-spellcheck --report "**/*.md" -n -a
+      run: docker run --rm -i -v "$PWD:/github/workspace" --workdir /github/workspace -e FORCE_COLOR=1 pipelinecomponents/markdown-spellcheck --report "**/*.md" -n -a
 
 # spelling:
 #     runs-on: ubuntu-latest
