--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -8,6 +8,16 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  generate-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v3
+      - id: set-matrix
+        run: echo "::set-output name=matrix::$(find \"$(pwd)\" -type f -iname \*.md | jq -R -s -c 'split(\"\n\")[:-1]')"
+
   markdown-link-check:
     runs-on: ubuntu-latest
     steps:
