--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -20,6 +20,9 @@ jobs:
 
   markdown-link-check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        file_to_check: ${{ fromJson(needs.generate-matrix.output.matrix) }}
     steps:
 
     - name: Install markdown-link-check
@@ -28,4 +31,4 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Run markdown-link-check against *.md files
-      run: find "$(pwd)" -iname \*.md -print0 | xargs -0 -n1 markdown-link-check --config "$(pwd)/.markdown-link-check.json" --quiet
+      run: markdown-link-check --config "$(pwd)/.markdown-link-check.json" --quiet "${{ martix.manifest }}"
