--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -16,7 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: set-matrix
-        run: echo "::set-output name=matrix::$(find "$(pwd)" -type f -iname \*.md | jq -R -s -c 'split("\n")[:-1]')"
+        run: |
+          set -x
+          echo "::set-output name=matrix::$(find "$(pwd)" -type f -iname \*.md | jq -R -s -c 'split("\n")[:-1]')"
 
   markdown-link-check:
     runs-on: ubuntu-latest
