--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -18,7 +18,7 @@ jobs:
       - id: set-matrix
         run: |
           set -x
-          echo "matrix=$(find "$(pwd)" -type f -iname \*.md | jq -R -s 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+          echo "matrix=$(find "$(pwd)" -type f -iname \*.md | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
   troubleshoot:
     runs-on: ubuntu-latest
