--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -30,6 +30,7 @@ jobs:
 
   markdown-link-check:
     runs-on: ubuntu-latest
+    needs: [generate-matrix]
     strategy:
       matrix:
         file_to_check: ${{ fromJson(needs.generate-matrix.output.matrix) }}
