--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -20,19 +20,11 @@ jobs:
           set -x
           echo "matrix=$(find "$(pwd)" -type f -iname \*.md | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
-  troubleshoot:
-    runs-on: ubuntu-latest
-    needs: [generate-matrix]
-    steps:
-      - run: cat $GITHUB_OUTPUT
-      - run: |
-          set -x
-          echo ${{ needs.generate-matrix.outputs.matrix }} | jq .
-
-  markdown-link-check:
+  check:
     runs-on: ubuntu-latest
     needs: [generate-matrix]
     strategy:
+      fail-fast: false
       matrix:
         file_to_check: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
     steps:
@@ -43,4 +35,4 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Run markdown-link-check against *.md files
-      run: markdown-link-check --config "$(pwd)/.markdown-link-check.json" --quiet "${{ matrix.manifest }}"
+      run: markdown-link-check --config "$(pwd)/.markdown-link-check.json" --quiet "${{ matrix.file_to_check }}"
