--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -10,6 +10,7 @@ on:
 jobs:
 
   generate-matrix:
+    name: Find markdown files to check
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -21,6 +22,7 @@ jobs:
           echo "matrix=$(find "$(pwd)" -type f -iname \*.md | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
   check:
+    name: Check markdown files
     runs-on: ubuntu-latest
     needs: [generate-matrix]
     strategy:
