--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -22,7 +22,6 @@ jobs:
           echo "matrix=$(find "$(pwd)" -type f -iname \*.md | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
   check:
-    name: Check markdown files
     runs-on: ubuntu-latest
     needs: [generate-matrix]
     strategy:
@@ -37,4 +36,4 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Run markdown-link-check against *.md files
-      run: markdown-link-check --config "$(pwd)/.markdown-link-check.json" --quiet "${{ matrix.file_to_check }}"
+      run: markdown-link-check --config "$(pwd)/.markdown-link-check.json" --verbose --quiet "${{ matrix.file_to_check }}"
