--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,7 +2,6 @@
 version: 2
 
 updates:
-
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -10,3 +9,12 @@ updates:
       interval: "daily"
     assignees:
       - "mikenye"
+      - "fredclausen"
+
+  # Maintain dependencies for GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    assignees:
+      - "fredclausen"
